--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 <td class="snippet"><pre class="fssnip highlighted"><code lang="fsharp"><span class="prep">#r</span> <span class="s">&quot;ElasticsearchTypeProvider.dll&quot;</span>
 <span class="k">open</span> <span class="i">ElasticsearchTypeProvider</span>
 
-<span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="f">printfn</span> <span class="s">&quot;hello = </span><span class="pf">%i</span><span class="s">&quot;</span> <span class="o">&lt;|</span> <span class="i">Library</span><span class="o">.</span><span class="i">hello</span> <span class="n">0</span>
+<span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="f">printfn</span> <span class="s">&quot;try some more = </span><span class="pf">%i</span><span class="s">&quot;</span> <span class="o">&lt;|</span> <span class="i">Library</span><span class="o">.</span><span class="i">hello</span> <span class="n">0</span>
 </code></pre></td>
 </tr>
 </table>
 <p>Some more info</p>
 <h2><a name="Samples-amp-documentation" class="anchor" href="#Samples-amp-documentation">Samples &amp; documentation</a></h2>
 <p>The library comes with comprehensible documentation.
-It can include tutorials automatically generated from <code>*.fsx</code> files in <a href="https://github.com/fsprojects/ElasticsearchTypeProvider/tree/master/docs/content">the content folder</a>.
+It can include tutorials automatically generated from <code>*.fsx</code> files in <a href="https://github.com/olgarose/ElasticsearchTypeProvider/tree/master/docs/content">the content folder</a>.
 The API reference is automatically generated from Markdown comments in the library implementation.</p>
 <ul>
 <li><p><a href="tutorial.html">Tutorial</a> contains a further explanation of this sample library.</p></li>
@@ -73,13 +73,13 @@ functions.</p>
 </li>
 </ul>
 <h2><a name="Contributing-and-copyright" class="anchor" href="#Contributing-and-copyright">Contributing and copyright</a></h2>
-<p>The project is hosted on <a href="https://github.com/fsprojects/ElasticsearchTypeProvider">GitHub</a> where you can <a href="https://github.com/fsprojects/ElasticsearchTypeProvider/issues">report issues</a>, fork
+<p>The project is hosted on <a href="https://github.com/olgarose/ElasticsearchTypeProvider">GitHub</a> where you can <a href="https://github.com/olgarose/ElasticsearchTypeProvider/issues">report issues</a>, fork
 the project and submit pull requests. If you're adding a new public API, please also
-consider adding <a href="https://github.com/fsprojects/ElasticsearchTypeProvider/tree/master/docs/content">samples</a> that can be turned into a documentation. You might
-also want to read the <a href="https://github.com/fsprojects/ElasticsearchTypeProvider/blob/master/README.md">library design notes</a> to understand how it works.</p>
+consider adding <a href="https://github.com/olgarose/ElasticsearchTypeProvider/tree/master/docs/content">samples</a> that can be turned into a documentation. You might
+also want to read the <a href="https://github.com/olgarose/ElasticsearchTypeProvider/blob/master/README.md">library design notes</a> to understand how it works.</p>
 <p>The library is available under Public Domain license, which allows modification and
 redistribution for both commercial and non-commercial purposes. For more information see the
-<a href="https://github.com/fsprojects/ElasticsearchTypeProvider/blob/master/LICENSE.txt">License file</a> in the GitHub repository.</p>
+<a href="https://github.com/olgarose/ElasticsearchTypeProvider/blob/master/LICENSE.txt">License file</a> in the GitHub repository.</p>
 
 <div class="tip" id="fs1">val printfn : format:Printf.TextWriterFormat&lt;&#39;T&gt; -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.ExtraTopLevelOperators.printfn</div>
 
