--- a/release-notes.html
+++ b/release-notes.html
@@ -32,26 +32,8 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h3><a name="1-0-1" class="anchor" href="#1-0-1">1.0.1</a></h3>
+<h4><a name="0-0-1-December-14-2017" class="anchor" href="#0-0-1-December-14-2017">0.0.1 - December 14 2017</a></h4>
 <ul>
-<li>Removed SourceLink</li>
-</ul>
-<h3><a name="1-0" class="anchor" href="#1-0">1.0</a></h3>
-<ul>
-<li>More awesome stuff coming</li>
-<li>Added SourceLink for Source Indexing PDB</li>
-</ul>
-<h4><a name="0-5-1-beta-November-6-2013" class="anchor" href="#0-5-1-beta-November-6-2013">0.5.1-beta - November 6 2013</a></h4>
-<ul>
-<li>Improved quality of solution-wide README.md files</li>
-</ul>
-<h4><a name="0-5-0-beta-October-29-2013" class="anchor" href="#0-5-0-beta-October-29-2013">0.5.0-beta - October 29 2013</a></h4>
-<ul>
-<li>Improved quality of solution-wide README.md files</li>
-</ul>
-<h4><a name="0-0-1-beta-October-24-2013" class="anchor" href="#0-0-1-beta-October-24-2013">0.0.1-beta - October 24 2013</a></h4>
-<ul>
-<li>Changed name from fsharp-project-scaffold to FSharp.ProjectScaffold</li>
 <li>Initial release</li>
 </ul>
 
